chore: add standard open source tooling
- Add dependabot.yml
- Add Makefile with test/lint/cover/build targets
- Add CONTRIBUTING.md and CODE_OF_CONDUCT.md
- Add issue and PR templates
- Update .golangci.yml with test exclusions
- Add interface assertions to policy.go

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,14 @@ linters:
   default: standard
   disable:
     - depguard
+  exclusions:
+    rules:
+      - linters: [errcheck]
+        path: _test\.go
+      - linters: [errcheck]
+        path: example_test\.go
+      - linters: [unused]
+        path: policy\.go
 
 formatters:
   enable:
